added functionality to send and verify otp

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,14 +5,10 @@
     "es6": true,
     "node": true
   },
-  "plugins": [
-    "cypress"
-  ],
+  "plugins": ["cypress"],
   "overrides": [
     {
-      "files": [
-        ".js"
-      ],
+      "files": [".js"],
       "extends": [
         "airbnb-base",
         "plugin:eslint-comments/recommended",
@@ -40,10 +36,7 @@
       }
     },
     {
-      "files": [
-        "*.ts",
-        "*.tsx"
-      ],
+      "files": ["*.ts", "*.tsx"],
       "extends": [
         "airbnb-base",
         "plugin:eslint-comments/recommended",
@@ -116,5 +109,8 @@
         "project": "./cypress/tsconfig.json"
       }
     }
-  ]
+  ],
+  "[typescript]": {
+    "files.eol": "\r\n"
+  }
 }
