--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sendgrid/mail": "^7.6.1",
     "@types/body-parser": "^1.19.2",
     "@types/mongoose": "^5.11.97",
+    "@types/twilio": "^3.19.3",
     "axios": "^1.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
@@ -47,7 +48,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.2",
     "rollbar": "^2.24.0",
-    "twilio": "^3.74.0",
+    "twilio": "^3.84.1",
     "winston": "^3.8.1",
     "winston-loki": "^6.0.5",
     "winston-transport": "^4.5.0"
