--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sendgrid/mail": "^7.6.1",
     "@types/body-parser": "^1.19.2",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/twilio": "^3.19.3",
     "axios": "^1.0.0",
     "bcrypt": "^5.0.1",
@@ -43,6 +44,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.2.1",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
