--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "bootstrap": "^5.1.3",
+    "cloudinary": "^1.37.3",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "cpx": "^1.5.0",
+    "datauri": "^4.1.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-winston": "^4.2.0",
