--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -1,38 +1,45 @@
 node:
   config:
-    env: "NODE_CONFIG_ENV"
+    env: 'NODE_CONFIG_ENV'
 
 rollbar:
-  env: "ROLLBAR_ENV"
-  accessToken: "ROLLBAR_ACCESS_TOKEN"
+  env: 'ROLLBAR_ENV'
+  accessToken: 'ROLLBAR_ACCESS_TOKEN'
 
 jwt:
-  token: "JWT_TOKEN"
+  token: 'JWT_TOKEN'
 
 twilio:
   verify:
-    accountSid: "TWILIO_ACCOUNT_SID"
-    authToken: "TWILIO_AUTH_TOKEN"
+    accountSid: 'TWILIO_ACCOUNT_SID'
+    authToken: 'TWILIO_AUTH_TOKEN'
+    verifySid: 'TWILIO_VERIFY_SID'
   messaging:
-    messagingServiceSid: "TWILIO_MESSAGING_SERVICE_SID"
+    messagingServiceSid: 'TWILIO_MESSAGING_SERVICE_SID'
 
-sendgridApiKey: "SENDGRID_API_KEY"
+cloudinary:
+  verify:
+    cloud_name: 'CLOUDINARY_CLOUD_NAME'
+    api_key: 'CLOUDINARY_API_KEY'
+    api_secret: 'CLOUDINARY_API_SECRET'
+
+sendgridApiKey: 'SENDGRID_API_KEY'
 
 mongoDb:
-  uri: "MONGODB_URI"
+  uri: 'MONGODB_URI'
 
 server:
-  port: "PORT"
+  port: 'PORT'
 
-webAppHost: "WEB_APP_HOST"
+webAppHost: 'WEB_APP_HOST'
 
 grafana:
-  host: "GRAFANA_HOST"
-  username: "GRAFANA_USERNAME"
-  password: "GRAFANA_PASSWORD"
+  host: 'GRAFANA_HOST'
+  username: 'GRAFANA_USERNAME'
+  password: 'GRAFANA_PASSWORD'
   labels:
-    app: "GRAFANA_APP"
-    env: "GRAFANA_ENV"
+    app: 'GRAFANA_APP'
+    env: 'GRAFANA_ENV'
 
 inspectlet:
-  wid: "INSPECTLET_KEY"
+  wid: 'INSPECTLET_KEY'
