--- a/config/default.yml
+++ b/config/default.yml
@@ -2,10 +2,10 @@ jwt:
   expiresIn: '1y' # default token expire time 1 year. Examples - https://github.com/vercel/ms#examples
 
 logger:
-  transports: [ 'console' ]
+  transports: ['console']
 
 communication:
-  services: [ ]
+  services: ['twilio']
 
 server:
   port: '8080'
