--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
     "es6": true,
     "node": true
   },
-  "plugins": ["cypress"],
+  "plugins": ["cypress", "baseui"],
   "overrides": [
     {
       "files": [".js"],
@@ -32,7 +32,10 @@
           }
         ],
         "eslint-comments/disable-enable-pair": "off",
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "baseui/deprecated-theme-api": "warn",
+        "baseui/deprecated-component-api": "warn",
+        "baseui/no-deep-imports": "warn"
       }
     },
     {
