--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/multer": "^1.4.7",
     "@types/twilio": "^3.19.3",
     "axios": "^1.0.0",
+    "baseui": "^13.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "bootstrap": "^5.1.3",
@@ -52,6 +53,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.2",
     "rollbar": "^2.24.0",
+    "styletron-engine-atomic": "^1.5.0",
+    "styletron-react": "^6.1.0",
     "twilio": "^3.84.1",
     "winston": "^3.8.1",
     "winston-loki": "^6.0.5",
@@ -84,6 +87,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint-plugin-baseui": "^13.0.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.25.2",
