--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/multer": "^1.4.7",
     "@types/twilio": "^3.19.3",
     "axios": "^1.0.0",
+    "babel-loader": "^9.1.3",
     "baseui": "^13.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
@@ -101,6 +102,7 @@
     "remark-cli": "^10.0.0",
     "remark-lint": "^9.1.0",
     "remark-preset-lint-recommended": "^6.1.1",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
     "sinon": "^13.0.1",
